# agent_poc

./: .gitignore  env.example  main.py  pyproject.toml  readme.txt
api_docs/: bruno.json
backend/: app.py
backend/db/: models.py  session.py
backend/db/repositories/: guest.py  message.py  reservation.py  room.py  service.py  session.py
backend/routes/: chat.py  reservations.py  service_orders.py
backend/schemas/: guest.py  message.py  reservation.py  room.py  session.py
backend/services/: auth.py  chat.py  reservation.py  service_orders.py
db/: start_postgres.sh
db/versions/: 001_add_tables.py  002_seed_rooms_and_services.py  003_seed_guests.py  004_89bcff19b03b_seed_reservations.py  005_seed_sessions.py
tests/: conftest.py
tests/db_tests/: test_guest.py  test_messages.py  test_reservations.py  test_rooms.py  test_services.py  test_session.py
tests/service_tests/: test_auth.py  test_chat.py  test_reservations.py  test_service_orders.py  test_session.py
ui/src/: App.css  App.jsx
ui/src/components/chat/: ChatMessage.jsx
ui/src/lib/: store.js
