[project]
name = "agent-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
ignore_no_config=true
dependencies = [
    "alembic>=1.14.0",
    "psycopg2>=2.9.10",
    "pydantic-ai[logfire]>=0.0.18",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
]
